wrote the basic html structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Train ticket price</title>
 </head>
 <body>
-  
+
+  <h1>Train ticket price calculator</h1>
+    <div id="hello">Welcome,</div>
+
+    <div>based on the data you entered:</div>
+
+    <ul>
+      <li id="km"> travel kilometres:</li>
+      <li id="age"> passenger's age:</li>
+    </ul>
+
+    <h2 id="ticket_price"> Your ticket price is: </h2>
+
+    <div>Have a good trip, and thank you for choosing us!</div>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
