wrote the instructions in script.js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <ul>
       <li id="km"> travel kilometres:</li>
-      <li id="age"> passenger's age:</li>
+      <li id="age"> passenger age:</li>
     </ul>
 
     <h2 id="ticket_price"> Your ticket price is: </h2>
