added control on input data

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-  <h1>Train ticket price calculator</h1>
+  <div id="text">
+
+    <h1>Train ticket price calculator</h1>
     <div id="hello">Welcome,</div>
 
     <div>based on the data you entered:</div>
@@ -20,6 +22,10 @@
     <h2 id="ticket_price"> Your ticket price is: </h2>
 
     <div>Have a good trip, and thank you for choosing us!</div>
+
+  </div>
+
+  
 
   <script src="js/script.js"></script>
 </body>
